added-media-queries-for-1921px-2560px

--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,9 @@ body {
   ::-webkit-scrollbar-thumb {
     background-color: #2DB656;
     border-radius: 30px;
-    
+   
   }
+  overflow: hidden;
 }
 
 code {
