--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,15 @@
+html{
+  height:-webkit-fill-available;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+  height:-webkit-fill-available;
 
   ::-webkit-scrollbar {
     width: 12px;
